# DingHai

./: .gitignore  .pdm-python  README.md  TODO.md  all_us_tickers.csv  all_us_tickers.xlsx  all_us_tickers_with_sector.csv  all_us_tickers_with_sector.xlsx  color_dxb_lianban.py  config.yaml  export_from_csv.py  export_tastytrade.py  finviz.csv  finviz_elite_export_all_us_tickers.py  finviz_elite_export_all_us_tickers_with_sector.py  get_ohlcv_and_returns.py  make_level2_data.py  merge.py  merge0119.py  merge_color_lianban.py  polygon_ohlcv_ndays.py  pyproject.toml  requirements.txt  stock_rank_change.xlsx  stock_rank_change19_20.xlsx  target.csv  temp_data_cache.csv  二级数据整理_Finviz合并版.xlsx  二级数据整理_免费版.xlsx
RAG/quant-analyst-rag-agent/: .env.example  .gitignore  Makefile  README.md  interview_notes.md  pyproject.toml  resume_bullets.md
RAG/quant-analyst-rag-agent/baselines/: phase0_leader_score.csv
RAG/quant-analyst-rag-agent/docs/: phase-a-canonical-search.md  private-material-intelligence.md
RAG/quant-analyst-rag-agent/examples/: architecture.md  demo_queries.md  sample_outputs.md
RAG/quant-analyst-rag-agent/scripts/: configure_kimi_env.sh  run_thesis_validation.py
RAG/quant-analyst-rag-agent/tests/: test_bm25_retriever.py  test_canonical_retrieval.py  test_canonical_retrieval_evaluation.py  test_cn_wave_features.py  test_cn_wave_scoring.py  test_evidence_packet.py  test_graph_workflow.py  test_grounded_synthesis.py  test_hybrid_retriever.py  test_kimi_client.py  test_knowledge_adapters.py  test_knowledge_contract.py  test_knowledge_store.py  test_macro_data.py  (+17 more)
(+247 files in other folders)
