[project]
name = "DingHai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "阿申", email = "echozshen@outlook.com"},
]
dependencies = ["pandas>=2.3.3", "openpyxl>=3.1.5", "xlrd>=2.0.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
