[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-analyst-rag-agent"
version = "0.1.0"
description = "LangGraph financial research agent with SQL tools, BM25, vector retrieval, and answer verification."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DingHai" }]
dependencies = [
    "langgraph>=0.2.0",
    "requests>=2.31.0",
]

[project.scripts]
quant-agent = "quant_agent.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
research = [
    "akshare>=1.16.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
]
kimi = [
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
